# studiesITMO

./: .gitignore  README.md
ASP.NET/MVC/MvcCreditApp/: MvcCreditApp.sln
ASP.NET/MVC/MvcDataViews/: MvcDataViews.sln
ASP.NET/MVC/WebMVCR1/: WebMVCR1.sln
ASP.NET/Razor/RazorPagesMovie/: RazorPagesMovie.sln
ASP.NET/Razor/WebAppCoreProduct/: WebAppCoreProduct.sln
Algoritms/Algoritm/: Algoritm.sln
Algoritms/Algoritm/Algoritm/: Program.cs
ConsoleApp1/: ConsoleApp1.sln
ConsoleApp1/.run/: ConsoleApp1.run.xml
ConsoleApp1/ConsoleApp1/: Exercise1.cs  Exercise4.cs
ConsoleAppC#/ConsoleApp1/ConsoleApp1/: Exercise2.cs  Exercise5.cs
ConsoleAppC#/Labs3/: Labs3.sln
ConsoleAppC#/Labs5/: Labs5.sln
ConsoleAppC#/Labs7/: Labs7.sln
ConsoleAppC#/Labs8/: Labs8.sln
ConsoleAppC#/Labs9/: Labs9.sln
ConsoleAppC#/trainingCenter/: trainingCenter.sln
Cpp/exercise/exercise_1/: CMakeLists.txt  main.cpp
Cpp/exercise/final assignment/: CMakeLists.txt  person.cpp  person_factory.cpp  ui_interface.cpp  ui_interface.h
Labs2/: Labs2.sln
Labs3/Labs3/: Program.cs
Labs5/: Labs5.sln
Labs5/Exircise3/: Program.cs
Labs5/Labs5/: Program.cs
Labs6/: CreateAccount.cs  Labs6.sln  Program.cs
Labs_4/Exerise1/: Exerise1.sln
MachineLearning/BikeRentalPrediction/: BikeRentalPrediction.sln
Python/finalAssignment/: app.py  build.spec  config.py  data_loader.py  import_data.py
WindowsApp/CalculatorApp/: CalculatorApp.sln
web/: laba-1-1.html  зачет.html  план.html
web/testAssignment/: about.html  form.html  index.html  media.html  planets.html
(+196 files in other folders)
